fix(develop): hide those pesky scrollbars - tab nav underline update on window:resize

--- a/src/app/modules/flow/steps/_base.scss
+++ b/src/app/modules/flow/steps/_base.scss
@@ -16,7 +16,7 @@
   padding: 0 0 0;
 
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   .title {
     margin: 0;
